<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Welcome.IntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/cv_bottom" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            app:cardCornerRadius="@dimen/_25sdp"
            app:cardElevation="@dimen/_3sdp">

            <LinearLayout
                android:id="@+id/ll_first_introPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/intro_first_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:lines="2"
                    android:text="@string/intro_first_2_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_15sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_fill_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_first_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:src="@drawable/ic_intro_next" />


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_second_introPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/intro_second_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_60sdp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:lines="2"
                    android:text="@string/intro_second_2_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_15sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_fill_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_second_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:src="@drawable/ic_intro_next" />


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_third_introPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/intro_third_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_60sdp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:lines="2"
                    android:text="@string/intro_third_2_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_15sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_fill_circle" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_third_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:src="@drawable/ic_intro_next" />


                </RelativeLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>